--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,10 @@ android {
         applicationId "top.jasongzy.spectrograph"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 3
-        versionName '2.1'
+        versionCode 4
+        versionName '2.2'
+
+        vectorDrawables.useSupportLibrary true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
